force-app/main/default/objects/Product_Utility_SavePoint__c/Product_Utility_SavePoint__c.object-meta.xml
<CustomObject>
    <label>Product Utility SavePoint</label>
    <nameField>
        <displayFormat>PU-{000}</displayFormat>
        <label>Product Utility SavePoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Utility SavePoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>