force-app/main/default/objects/Product_Utility_SavePoint__c/fields/Failed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_Ids__c</fullName>
    <label>Failed Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>