force-app/main/default/objects/Product_Utility_SavePoint__c/fields/Revert_Error__c.field-meta.xml
<CustomField>
    <fullName>Revert_Error__c</fullName>
    <label>Revert Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>