force-app/main/default/objects/Product_Utility_SavePoint__c/fields/Update_Error__c.field-meta.xml
<CustomField>
    <fullName>Update_Error__c</fullName>
    <label>Update Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>