force-app/main/default/objects/Product_Utility_SavePoint__c/listViews/Recently_created.listView-meta.xml
<ListView>
    <fullName>Recently_created</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Recently created</label>
</ListView>