force-app/main/default/objects/Product_Utility_SavePoint__c/listViews/Transactions.listView-meta.xml
<ListView>
    <fullName>Transactions</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Update_Error__c</columns>
    <columns>Revert_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Transactions</label>
</ListView>